--- a/config/templates/helper-sh/check-omnibus-package-signed.erb
+++ b/config/templates/helper-sh/check-omnibus-package-signed.erb
@@ -1,4 +1,4 @@
-#!<%= @bin_dir %>/bash
+#!<%= install_dir %>/bin/bash
 #
 # Copyright:: Copyright 2017 Chef Software, Inc.
 # License:: Apache License, Version 2.0
