--- a/config/templates/helper-sh/install-omnibus-product.erb
+++ b/config/templates/helper-sh/install-omnibus-product.erb
@@ -30,15 +30,17 @@ OPTIONS:
   -v VERSION       Which version of the product you wish to install. (default: latest)
   -c CHANNEL       The channel from which you wish to install the product. (default: stable)
   -d DOWNLOAD_DIR  The directory to which you wish to download the product package. (default: PWD)
+  -i INSTALL_DIR   The directory to which the product package is installed. (default: PWD)
 DOC
 }
 
 channel="stable"
 download_dir="$(pwd)"
+install_dir=""
 product_name=""
 product_version="latest"
 
-while getopts ":c:d:P:v:h" opt
+while getopts ":c:d:i:P:v:h" opt
 do
   case "$opt" in
     c)
@@ -47,8 +49,12 @@ do
     d)
       download_dir="$OPTARG"
       ;;
+    i)
+      install_dir="$OPTARG"
+      ;;
     P)
       product_name="$OPTARG"
+      install_dir=${install_dir:-$product_name}
       ;;
     v)
       product_version="$OPTARG"
@@ -72,6 +78,44 @@ product_name=${product_name:?A product name must be specified}
 
 echo "--- Installing $channel $product_name $product_version"
 download_url="$(mixlib-install download --url --channel "$channel" "$product_name" --version "$product_version")"
+
+FILE_TYPE="${download_url##*.}"
+case "$FILE_TYPE" in
+  "bff")
+    sudo installp -u "$product" || true
+    ;;
+  "deb")
+    sudo dpkg -P "$product" || true
+    ;;
+  "dmg")
+    sudo rm -rf "$install_dir"
+    sudo pkgutil --forget "com.getchef.pkg.$product" || true
+    ;;
+  "pkg")
+    sudo rm -rf "$install_dir"
+    sudo pkgutil --forget "com.getchef.pkg.$product" || true
+    ;;
+  "p5p")
+    sudo pkg uninstall "$product" || true
+    ;;
+  "rpm")
+    sudo rpm -ev "$product" || true
+    ;;
+  "sh")
+    # intentionally left blank
+    ;;
+  "solaris")
+    if sudo pkgrm -a /var/sadm/install/admin/auto-install -n "$product"; then
+      :
+    else
+      echo "WARNING: CLEANING UP BROKEN POSTRM FROM PRIOR INSTALLATION!!!!!!!!!!!!!!!!!!!!!!"
+      sudo rm -f "/var/sadm/pkg/$product/install/postremove" || true
+      sudo pkgrm -a /var/sadm/install/admin/auto-install -n "$product" || true
+    fi
+    ;;
+esac
+
+sudo rm -rf "$install_dir"
 
 <%= install_dir %>/embedded/bin/mixlib-install install-script | sudo bash -s -- -d "$download_dir" -l "$download_url" 2>&1
 
