Define Get-Win32OS function
Signed-off-by: Jeremiah Snapp <jeremiah@chef.io>

--- a/config/templates/helper-exe/install-omnibus-product.ps1.erb
+++ b/config/templates/helper-exe/install-omnibus-product.ps1.erb
@@ -20,6 +20,17 @@ param ([parameter(Mandatory=$true)][string]$Product, [string]$Channel = "stable"
 # Stop script execution when a non-terminating error occurs
 $ErrorActionPreference = "Stop"
 
+function Get-Win32OS {
+  $class = "win32_operatingsystem"
+
+  if(Get-Command -Name Get-CimInstance -ErrorAction SilentlyContinue) {
+    return Get-CimInstance $class
+  }
+  else {
+    return Get-WmiObject $class
+  }
+}
+
 # this platform version detection code is taken from mixlib-install
 switch -regex ((Get-Win32OS).version) {
   '10\.0\.\d+' {$platform_version = '2016'}
