--- a/config/templates/helper-sh/install-omnibus-product.erb
+++ b/config/templates/helper-sh/install-omnibus-product.erb
@@ -79,6 +79,8 @@ product_name=${product_name:?A product name must be specified}
 echo "--- Installing $channel $product_name $product_version"
 download_url="$(<%= install_dir %>/embedded/bin/mixlib-install download --url --channel "$channel" "$product_name" --version "$product_version")"
 
+echo "Removing any existing install of $product_name"
+
 FILE_TYPE="${download_url##*.}"
 case "$FILE_TYPE" in
   "bff")
