--- a/config/templates/helper-sh/load-omnibus-toolchain.erb
+++ b/config/templates/helper-sh/load-omnibus-toolchain.erb
@@ -22,9 +22,9 @@
 # Load the base Omnibus environment
 ###################################################################
 <% if aix -%>
-export PATH="/opt/IBM/xlC/13.1.3/bin:/opt/IBM/xlc/13.1.3/bin:/opt/IBM/xlC/13.1.0/bin:/opt/IBM/xlc/13.1.0/bin:<%= install_dir %>/bin:/usr/local/bin:$PATH"
+export PATH="/opt/IBM/xlC/13.1.3/bin:/opt/IBM/xlc/13.1.3/bin:/opt/IBM/xlC/13.1.0/bin:/opt/IBM/xlc/13.1.0/bin:<%= install_dir %>/bin:<%= install_dir %>/embedded/bin:/usr/local/bin:$PATH"
 <% else -%>
-export PATH="<%= install_dir %>/bin:$PATH"
+export PATH="<%= install_dir %>/bin:<%= install_dir %>/embedded/bin:$PATH"
 <% end -%>
 export SSL_CERT_FILE="<%= install_dir %>/embedded/ssl/certs/cacert.pem"
 
