--- a/config/templates/helper-exe/load-omnibus-toolchain.ps1.erb
+++ b/config/templates/helper-exe/load-omnibus-toolchain.ps1.erb
@@ -20,20 +20,20 @@
 ###############################################################
 
 <% if architecture == "x86" -%>
-$env:PATH="C:\wix;C:\Program Files\7-zip;C:\Program Files (x86)\Windows Kits\8.1\bin\x64;<%= install_dir %>\embedded\bin;<%= install_dir %>\embedded\bin\mingw32\bin;<%= install_dir %>\embedded\bin\usr\bin;<%= install_dir %>\embedded\git\cmd;<%= install_dir %>\embedded\git\mingw32\libexec\git-core;$env:PATH"
-$env:MSYSTEM='MINGW32'
-$env:OMNIBUS_WINDOWS_ARCH='x86'
+  $env:MSYSTEM='MINGW32'
+  $env:OMNIBUS_WINDOWS_ARCH='x86'
 <% else -%>
-$env:PATH="C:\wix;C:\Program Files\7-zip;C:\Program Files (x86)\Windows Kits\8.1\bin\x64;<%= install_dir %>\embedded\bin;<%= install_dir %>\embedded\bin\mingw64\bin;<%= install_dir %>\embedded\bin\usr\bin;<%= install_dir %>\embedded\git\cmd;<%= install_dir %>\embedded\git\mingw64\libexec\git-core;$env:PATH"
-$env:MSYSTEM='MINGW64'
-$env:OMNIBUS_WINDOWS_ARCH='x64'
+  $env:MSYSTEM='MINGW64'
+  $env:OMNIBUS_WINDOWS_ARCH='x64'
 <% end -%>
 
+$env:MSYS2_INSTALL_DIR="C:\chef-releng\msys2"
+$env:PATH="$env:MSYS2_INSTALL_DIR\$env:MSYSTEM\bin;$env:MSYS2_INSTALL_DIR\usr\bin;C:\wix;C:\Program Files\7-zip;C:\Program Files (x86)\Windows Kits\8.1\bin\x64;<%= install_dir %>\embedded\bin;<%= install_dir %>\embedded\bin\$env:MSYSTEM\bin;<%= install_dir %>\embedded\bin\usr\bin;<%= install_dir %>\embedded\git\cmd;<%= install_dir %>\embedded\git\$env:MSYSTEM\libexec\git-core;$env:PATH"
 $env:HOMEDRIVE="C:"
 $env:HOMEPATH="\buildkite-agent"
 $env:OMNIBUS_TOOLCHAIN_INSTALL_DIR='<%= install_dir %>'
 $env:SSL_CERT_FILE='<%= install_dir %>\embedded\ssl\certs\cacert.pem'
-$env:BASH_ENV='<%= install_dir %>\embedded\bin\etc\msys2.bashrc'
+$env:BASH_ENV='$env:MSYS2_INSTALL_DIR\etc\bash.bashrc'
 
 ###############################################################
 # Query tool versions
